# LibraryManagementSystem

./: .gitignore  CMakeLists.txt  README.md  addbook.c  addbook.h  appstate.c  appstate.h  book.c  book.h  booklist.c  booklist.h  dialog.c  dialog.h  fileops.c  fileops.h  library.c  library.h  logger.c  logger.h  main.c  menu.h
ui/: add_book.cmb  add_book.ui  book_data_display.cmb  book_data_display.ui  lims.cmb  lims.ui
